<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.Organizer">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/organizer_actionbar"
        app:title="Create/Edit Event"
        app:titleCentered="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:titleTextColor="@color/white"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Event Name -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="Event Name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/event_name_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterMaxLength="30">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Event Description -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:text="Event Description"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/event_description_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_description_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:minLines="4" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Date & Time Container -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <!-- Start Date & Time -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingEnd="8dp">

                    <!-- Start Date -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/start_date_input_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Start Date"
                        app:endIconDrawable="@drawable/ic_calendar_today"
                        app:endIconMode="custom"
                        app:hintEnabled="true"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/start_date_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:minHeight="64dp"
                            android:paddingBottom="0dp"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Start Time -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/start_time_input_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="Start Time"
                        app:endIconDrawable="@drawable/ic_access_time"
                        app:endIconMode="custom"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/start_time_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:minHeight="64dp"
                            android:paddingBottom="0dp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <!-- End Date & Time -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="8dp">

                    <!-- End Date -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/end_date_input_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="End Date"
                        app:endIconDrawable="@drawable/ic_calendar_today"
                        app:endIconMode="custom"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/end_date_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:minHeight="64dp"
                            android:paddingBottom="0dp"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- End Time -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/end_time_input_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="End Time"
                        app:endIconDrawable="@drawable/ic_access_time"
                        app:endIconMode="custom"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/end_time_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:minHeight="64dp"
                            android:paddingBottom="0dp"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Maximum Number of Attendees -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Max Attendees:"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:paddingEnd="8dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/max_attendees_input_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="Optional">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/max_attendees_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <!-- Geolocation Tracking Toggle -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Geo Tracking:"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:paddingEnd="8dp"/>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/geo_tracking_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>

            <!-- Upload Poster Button -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/upload_poster_button"
                    style="@style/CustomOutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Upload Poster"
                    app:icon="@drawable/ic_upload"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp"/>

                <Space
                    android:layout_width="16dp"
                    android:layout_height="match_parent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/generate_qr_code_button"
                    style="@style/CustomOutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Select QR Code"
                    app:icon="@drawable/ic_qr_code"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel_button"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/secondary"
                    android:text="Cancel"
                    android:textColor="@color/onSecondary" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0" />

                <Button
                    android:id="@+id/confirm_button"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/secondary"
                    android:text="Confirm"
                    android:textColor="@color/onSecondary" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>



