<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/organizer_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?background"
    tools:context=".activities.OrganizerActivity">

    <FrameLayout
        android:id="@+id/organizer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/attendee_organizer"
                layout="@layout/actionbar_organizer" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/organized_events"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>


            <LinearLayout
                android:id="@+id/bottom_nav_organizer"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/bottom_nav_organizer"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/user_mode_lin_layout"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/button_user_mode"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:paddingBottom="7dp"
                        android:paddingTop="7dp"
                        app:srcCompat="?switchProfileIcon"
                        android:contentDescription="TODO" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/switch_profile_organizer"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/button_create_event"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:paddingTop="7dp"
                        android:paddingBottom="7dp"
                        android:src="?new_event_image"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/new_event"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

