...
    <RelativeLayout
        android:id="@+id/general_actionbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/attendee_actionbar">
        <ImageButton
            android:id="@+id/back_arrow_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="?selectableItemBackgroundBorderless"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_back_arrow"
...
            android:id="@+id/profile_button"
            android:layout_width="50dp"
            app:cardCornerRadius="150dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true">
            <ImageView
                android:id="@+id/profile_image"
                android:clickable="true"
                android:scaleType="centerCrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/test_profile"
                >
...
